--- a/client/package.json
+++ b/client/package.json
@@ -7,13 +7,14 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.2.0",
-    "@mui/material": "^6.2.0",
+    "@mui/material": "^6.2.1",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "moment": "^2.30.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-file-base64": "^1.0.3",
+    "react-redux": "^9.2.0",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0"
